# expense-tracker-cli

./: .gitignore  README.md  pyproject.toml
src/expense_tracker_cli/: cli.py  expense.py  expense_manager.py
