[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "expense_tracker_cli"
version = "0.1.0"
description = "CLI for managing expenses"
requires-python = ">=3.10"

[project.scripts]
expense-tracker = "expense_tracker_cli.cli:main"

[tool.setuptools.packages.find]
where = ["src"] 